WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139580
TextIndicator (and other view-relative subwindows) is not dismissed on zoom gesture
https://bugs.webkit.org/show_bug.cgi?id=139580
Summary
TextIndicator (and other view-relative subwindows) is not dismissed on zoom g...
Tim Horton
Reported
2014-12-12 02:08:16 PST
TextIndicator (and other view-relative subwindows) is not dismissed on zoom gesture
Attachments
Patch
(12.03 KB, patch)
2014-12-12 02:08 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(17.32 KB, patch)
2014-12-12 02:36 PST
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-12-12 02:08:54 PST
Created
attachment 243188
[details]
Patch
Tim Horton
Comment 2
2014-12-12 02:36:52 PST
Created
attachment 243190
[details]
Patch
Tim Horton
Comment 3
2014-12-12 15:16:42 PST
http://trac.webkit.org/changeset/177242
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug